# exception-rt

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: ci.yml
cmake/: exceptions-rtConfig.cmake.in
include/exception-rt/: exception.hpp
include/exceptions-rt/: exception.hpp
src/: exception.cpp
test/: exception_rt_test.cpp
